Limit number of records returned for a BIN, add link to bigger maps

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -64,6 +64,7 @@ en:
     lede: A dataset comprises a set of barcodes.
     map: Map
     map_lede: Localities of barcodes in this dataset.
+    map_big: View on big map.
     title: Dataset %s
     
   taxonomy:
