Add list of DS- datasets to the display of a barcode

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -44,6 +44,7 @@ en:
     
   record:
     bin_uri: BIN ID
+    datasets: Datasets
     details: Details
     details_lede: Data for this barcode.
     identification: Identification
